--- a/css/global.css
+++ b/css/global.css
@@ -124,7 +124,7 @@ a.project {
 .not_mobile.project header h1,
 .not_mobile.project header h2,
 .not_mobile.project header a{
-    color:              rgba(0,0,0, .65);
+    /*color:              rgba(0,0,0, .65);*/
     -webkit-transition: color 400ms ease;
     }
 
